# deriv-api

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  cliff.toml
.github/workflows/: ci.yml  publish.yml
examples/ping_example/: .env.example  Cargo.toml
examples/ping_example/src/: main.rs
examples/ticks_stream_example/: Cargo.toml
examples/ticks_stream_example/src/: main.rs
schema/: Cargo.toml
schema/src/: accept_risk.rs  accept_risk_enum.rs  account_category.rs  account_category_enum.rs  account_item.rs  account_list.rs  account_list_enum.rs  account_list_item.rs  account_list_request.rs  account_list_response.rs  account_opening_reason.rs  account_opening_reason_enum.rs  account_opening_self_declaration_required.rs  account_opening_self_declaration_required_enum.rs  account_turnover.rs  account_turnover_enum.rs  account_type.rs  account_type_enum.rs  accounts.rs  accounts_enum.rs  accounts_item.rs  accounts_value.rs  action.rs  action_enum.rs  action_type.rs  action_type_enum.rs  active_enum.rs  active_symbol_item.rs  active_symbols.rs  active_symbols_enum.rs  active_symbols_item.rs  active_symbols_request.rs  active_symbols_response.rs  actual.rs  add_to_login_history.rs  add_to_login_history_enum.rs  additional.rs  address.rs  address_parseable_enum.rs  adjust_start_time.rs  (+999 more)
src/: client.rs  error.rs  lib.rs  subscription.rs  utils.rs
src/api/: calls.rs  mod.rs  subscription_calls.rs
src/types/: mod.rs
