[package]
name = "ticks_stream_example"
version = "0.1.0"
edition = "2021"

[dependencies]
deriv-api = { path = "../.." }
deriv-api-schema = { path = "../../schema" }
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3"
log = "0.4"
env_logger = "0.10.0"
serde_json = "1.0"
dotenv = "0.15.0"